--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-		<meta name="viewport" content="width=device-width">
-		<title>GuardianNet2</title>
-	</head>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>GuardianNet2</title>
+  <style>
+    body {
+      background-color: #000;
+      color: #0f0;
+      font-family: monospace;
+      text-align: center;
+      padding: 50px;
+    }
+    h1 {
+      font-size: 3em;
+    }
+    p {
+      font-size: 1.5em;
+    }
+    a {
+      color: #0f0;
+      text-decoration: underline;
+    }
+  </style>
+</head>
 <body>
-No funciona todavía
+  <h1>GuardianNet2</h1>
+  <p>La herramienta definitiva para proteger tu sistema.</p>
+  <a href="https://github.com/tuusuario/guardian-database/raw/main/revision.txt" target="_blank">Descargar revision.txt</a>
 </body>
+</html>
