--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 </head>
 <body>
   <h1>GuardianNet2</h1>
-  <p>La herramienta definitiva para proteger tu sistema.</p>
-  <a href="https://github.com/tuusuario/guardian-database/raw/main/revision.txt" target="_blank">Descargar revision.txt</a>
+  <h3>Herramienta definitiva para proteger tu sistema.</h3>
+  <p>Nuestro Slogan: "Mi red, mi escudo".</p>
+  <p>Puedes proteger tu red, tu celular, tu laptop, etc, con herramientas integradas programadas por Ingenieros informáticos dedicados a la ciberseguridad.</p>
+  <a href="https://github.com/tuusuario/guardian-database/raw/main/revision.txt" target="_blank">Descargar GuardianNet2</a>
 </body>
 </html>
